--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -3,6 +3,6 @@ body {
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun,
     sans-serif;
   //background-color: #f4f3ef;
-  background: linear-gradient(0deg, rgba(251, 250, 248, 0.9), rgba(251, 250, 248, 0.9)), linear-gradient(180deg, #FFFCEE 3%, #FBF1C9 100%);
+  //background: linear-gradient(0deg, rgba(251, 250, 248, 0.9), rgba(251, 250, 248, 0.9)), linear-gradient(180deg, #FFFCEE 3%, #FBF1C9 100%);
   overflow-y: overlay;
 }
